--- a/frontend/webdevprelim.css
+++ b/frontend/webdevprelim.css
@@ -1,14 +1,27 @@
-.homeimage{
+.homeimage {
     padding-left: 5vw;
     width: 15vw;
     height: auto;
 }
 
-.carus{
-    min-height: 60vh;
+.carus {
     object-fit: cover;
 }
 
-.navbarcol{
+.navbarcol {
     background-color: #450ba3;
+}
+
+.card-body,
+.card-img-top {
+    background-color: #9fd1ff;
+}
+
+.card-title,
+.card-text {
+    color: rgb(0, 0, 0);
+}
+
+body {
+    background-color: #690ebe;
 }
